--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ layout: default
             <div class="cat-text">
               <h1>naturalist</h1>
               <div class="cat-desc">
-                <p>I'm a STEAM-focused naturalist with experience at multiple institutions across the state of Ohio.</p>
+                <p>I'm a naturalist connecting people to mushrooms, traditional uses of native plants, and promoting creativity and exploration for all ages.</p>
               </div>
 
               <div class="cat-examples">
@@ -33,36 +33,8 @@ layout: default
                 <div class="row-mini-flex">
                   <div id="cat-stem" class="cat-ex">
                   <div class="desc-text">
-                  <h2>STEAM-Focused Programming</h2>
-                  <h3> STEAM (<strong>S</strong>cience <strong>T</strong>echnology <strong>E</strong>ngineering <strong>A</strong>rt and <strong>M</strong>ath) programming and environmental education belong together. From preschoolers experimenting with simple tools to explore bird beak or turtle feet adaptations to engineering winter homes for native Ohio animals, STEAM and nature go hand in hand.</h3>
-
-                  <script>
-                    $( function() {
-                      $( "#stem-accordion" ).accordion({
-                        collapsible: true,
-                        heightStyle: "content",
-                        active: false
-                      });
-                    } );
-                  </script>
-
-
-                  <div id="stem-accordion">
-                    <h3>Check It Out</h3>
-                    <div id="hibernaculum">
-                      <div id="hib-desc-1" class="hib-desc">
-                        <h2>Build a Winter Home Engineering Drop-By Activity</h2>
-                        <p>Using natural materials such as moss, leaves, sticks, grasses and more, participants build winter homes or hibernacula for critters to stay warm in the winter.</p>
-                        <p>Related books were also made available for an optional reading activity for solo or partnered reading. During this drop-by, a father read <em><a href="https://www.worldcat.org/title/bear-snores-on/oclc/44045520">Bear Snores On</a></em> with his youngest after they made their own home, while the older siblings made multiple iterations of winter homes.</p>
-                      </div>
-                      <img id="hib-img-1" class="stem-ex" src="{{ site.baseurl }}/assets/images/hibernaculum1.jpg"></img>
-                      <div class="row-mini-flex">
-                        <img id="hib-img-4" class="stem-ex" src="{{ site.baseurl }}/assets/images/hibernaculum4.jpg"></img>
-                        <img id="hib-img-3" class="stem-ex" src="{{ site.baseurl }}/assets/images/hibernaculum3.jpg"></img>
-                      </div>
-                    </div>
-                  </div>
-
+                  <h2>Fungi and the Critters Who Eat Them</h2>
+                  <h3><em>What's that growing in the mulch? In the tree lawn? In the deep forest? In the community park down the street? And who is that eating it?</em></h3><h3>I specialize in the fungi and invertebrates pop up absolutely everywhere, both creepy and adorable, weird and fascinating.</h3><h3>They are the perfect introduction and reintroduction to nature. They remind us that nature is not separate from us. It's doing its own thing right next to us doing our own thing. What are they doing in their not-so-secret lives and what can we learn from them?</h3>
                   </div>
                   </div>
 
@@ -72,18 +44,23 @@ layout: default
 
                 <div class="row-mini-flex">
 
-                  <div id="cat-me-chicken"></div>
+                  <div id="cat-dyers"></div>
 
-                  <div id="cat-ohio" class="cat-ex">
+                  <div id="cat-art" class="cat-ex">
                     <div class="desc-text">
-                      <h2>Ohio and Beyond</h2>
-                      <h3>Between my time at <a href="https://aullwood.audubon.org/">Aullwood Audubon Nature Center and Farm</a>, <a href="https://www.columbuszoo.org/">Columbus Zoo and Aquarium</a>, <a href="https://greatscience.com/">Great Lakes Science Center</a> and <a href="https://www.clevelandmetroparks.com/">Cleveland Metroparks</a>, I've helped guests overcome their fear of birds by helping them hand feed lorikeets, provided care for a one-eyed screech owl, and introduced toddlers and senior citizens alike to the wonders of Ohio mushrooms.</h3>
+                    <h2>Creativity in Nature</h2>
+                    <h3>The natural world is a source not just for creative inspiration but the tools themselves to create with. From pigments to traditional plant fibers, humans have been using the natural world to make art. I love to introduce children and adults alike to responsibly exploring the possibilities and creative histories found in trees, flowers, rocks, fungi and more.</h3><h3>This shows up in my practice as hikes teaching the historical uses of native plants found in the meadows of Acacia Reservation, to sustainably collecting appropriate leaves, flowers and sticks with children to use as tools, inspiration or raw materials for art.</h3>
+                    <h3></h3>
                     </div>
                   </div>
 
+                </div>
+
+                <div class="row-mini-flex">
+                  
                   <div id="cat-hike" class="cat-ex">
                     <div class="desc-text cat-desc-1">
-                      <p>If you're looking for urban wildlife walks, mammoths hiding in suburbia, or mushroom hikes in the woods, I'd love to go exploring with you!</p>
+                      <p>If you're looking for urban wildlife walks, want to learn how to dye with local mushrooms, or ever wondered what lives under logs, I'd love to go exploring with you!</p>
                     </div>
                     <div class="cat-button"><a href="{{ site.baseurl }}/contact">Hike With Me!</a></div>
                   </div>
