--- a/_sass/kmr/_home.scss
+++ b/_sass/kmr/_home.scss
@@ -169,9 +169,9 @@
 
 #nature-cat {
   .cat-pic {
-    background-image: url("assets/images/kelsey_nets.png");
+    background-image: url("assets/images/kelsey_hike.png");
     background-size: 400px;
-    background-position: right;
+    background-position: left;
   }
 }
 
@@ -253,7 +253,7 @@
 
 .col-mini-flex {flex-direction: column;}
 
-#cat-stem, #cat-ohio, #cat-hike, #cat-mlis, #cat-hist, #cat-gen, #cat-gen-work, #cat-lambs, #cat-vis, #cat-toad {flex: 1;}
+#cat-stem, #cat-ohio, #cat-hike, #cat-mlis, #cat-hist, #cat-gen, #cat-gen-work, #cat-lambs, #cat-vis, #cat-toad, #cat-art, #cat-dye {flex: 1;}
 #cat-lambs, #cat-vis, #cat-toad {h3 {text-align: center;}}
 
 .cat-ex {
@@ -391,7 +391,7 @@
   }
 }
 
-#cat-me-chicken, #cat-turt, #cat-mlis-img {
+#cat-me-chicken, #cat-turt, #cat-mlis-img, #cat-fungi, #cat-dyers {
   @media ($desktop) {width: 300px;}
   @media ($tablet) {width: 200px;}
   @media (max-width: 850px) {display: none;}
@@ -407,10 +407,27 @@
 
 #cat-turt {
   min-height: 100%;
-  background-image: url("assets/images/gentleman.jpg");
+  background-image: url("assets/images/slugonmushroom.jpg");
+  background-size: 300px;
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
+
+#cat-fungi {
+  min-height: 100%;
+  background-image:url("assets/images/orangefungi.jpg");
   background-size: 300px;
   background-repeat: no-repeat;
 }
+
+#cat-dyers {
+  min-height: 100%;
+  background-image:url("assets/images/dyerspolypore_largesquare.jpg");
+  background-size: 300px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 
 /**MLIS**/
 
