--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
                     <a href="#nature-cat">naturalist.</a> <a href="#library-cat">librarian.</a> <a href="#web-cat">designer.</a>
                 </div>
                 <div class="home-desc">
-                  I'm Kelsey Marie Rogers. I believe every object has a story to tell, every creature has a history. Let me help you bring those stories to life.
+                  I'm Kelsey Marie Rogers. I believe everything, from a slug to a solar prominence, has a story to tell. Let's bring those stories to life.
                 </div>
             </div>
         </div>
@@ -25,7 +25,7 @@ layout: default
             <div class="cat-text">
               <h1>naturalist</h1>
               <div class="cat-desc">
-                <p>I'm a naturalist connecting people to mushrooms, traditional uses of native plants, and promoting creativity and exploration for all ages.</p>
+                <p>Join me in exploring new ways of connecting people to their environment. From LGBTQ+ hikes celebrating community to building toads out of cardboard, let's brainstorm creative ways to get excited about our native flora, fauna, and funga!</p>
               </div>
 
               <div class="cat-examples">
@@ -33,8 +33,10 @@ layout: default
                 <div class="row-mini-flex">
                   <div id="cat-stem" class="cat-ex">
                   <div class="desc-text">
-                  <h2>Fungi and the Critters Who Eat Them</h2>
-                  <h3><em>What's that growing in the mulch? In the tree lawn? In the deep forest? In the community park down the street? And who is that eating it?</em></h3><h3>I specialize in the fungi and invertebrates pop up absolutely everywhere, both creepy and adorable, weird and fascinating.</h3><h3>They are the perfect introduction and reintroduction to nature. They remind us that nature is not separate from us. It's doing its own thing right next to us doing our own thing. What are they doing in their not-so-secret lives and what can we learn from them?</h3>
+                  <h2>Out in the Parks</h2>
+                  <h3>How do you bring pride to your parks? <strong>Out in the Parks</strong>, a programming series for Cleveland area LGBTQ+ friends, family, and allies, is proof that it's not only possible, but a successful endeavor.</h3>
+                  <h3>Between June 2023 and the end of June 2024, I have helped build <strong>Out in the Parks</strong> into a twice-monthly series, coordinating across Cleveland Metroparks to provide 27 programs across 8 reservations, serving over 300 LGBTQ+ friends and allies.</h3>
+                  <h3>From rainbow marshmallows to wildflower hikes, beach cleanups to kayaking, community building is not just possible but a vital part of long-lived, successful nature-based programming.</h3>
                   </div>
                   </div>
 
@@ -48,21 +50,10 @@ layout: default
 
                   <div id="cat-art" class="cat-ex">
                     <div class="desc-text">
-                    <h2>Creativity in Nature</h2>
-                    <h3>The natural world is a source not just for creative inspiration but the tools themselves to create with. From pigments to traditional plant fibers, humans have been using the natural world to make art. I love to introduce children and adults alike to responsibly exploring the possibilities and creative histories found in trees, flowers, rocks, fungi and more.</h3><h3>This shows up in my practice as hikes teaching the historical uses of native plants found in the meadows of Acacia Reservation, to sustainably collecting appropriate leaves, flowers and sticks with children to use as tools, inspiration or raw materials for art.</h3>
+                    <h2>Nature-based STEAM</h2>
+                    <h3>From summer camps to afterschool drop-bys, environmental education and engineering go hand in hand.</h3><h3>Be inspired by nature’s engineers during forest hikes and creek walking. Then try your hand at engineering challenges by designing and building your own shelters, rafts, and more!</h3><h3>By giving kids of all ages the tools, resources, and space to explore, research, try and fail and try again, you can empower them and give them ownership not just of their abilities, but of their experience and the parks at large.</h3>
                     <h3></h3>
                     </div>
-                  </div>
-
-                </div>
-
-                <div class="row-mini-flex">
-                  
-                  <div id="cat-hike" class="cat-ex">
-                    <div class="desc-text cat-desc-1">
-                      <p>If you're looking for urban wildlife walks, want to learn how to dye with local mushrooms, or ever wondered what lives under logs, I'd love to go exploring with you!</p>
-                    </div>
-                    <div class="cat-button"><a href="{{ site.baseurl }}/contact">Hike With Me!</a></div>
                   </div>
 
                 </div>
